# mcp

./: README.md
docusaurus/: sidebars.ts
docusaurus/docs/servers/: emr-troubleshooting-mcp-server.mdx
docusaurus/static/assets/: server-cards.json
src/emr-troubleshooting-mcp-server/: .dockerignore  .flake8  CHANGELOG.md  Dockerfile  README.md  docker-healthcheck.sh  fastmcp.json  pyproject.toml
src/emr-troubleshooting-mcp-server/awslabs/: __init__.py
src/emr-troubleshooting-mcp-server/awslabs/emr_troubleshooting_mcp_server/: __init__.py  consts.py  models.py  server.py  tools.py
src/emr-troubleshooting-mcp-server/awslabs/emr_troubleshooting_mcp_server/data/: emr_sdk_known_issues.jsonl  emr_service_known_issues.jsonl  error_exception.json  hadoop_hdfs_known_issues.jsonl  hadoop_yarn_known_issues.jsonl  hbase_known_issues.jsonl  hive_known_issues.jsonl  presto_known_issues.jsonl  spark_known_issues.jsonl
src/emr-troubleshooting-mcp-server/tests/: __init__.py  test_integration.py  test_server.py  test_tool_registration.py  test_tools.py
